Made some optimizations and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/fontawesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/solid.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/brands.min.css" rel="stylesheet">
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <!-- <meta property="og:type" content="website">
     <meta property="og:url" content="https://example.com/page.html">
@@ -57,6 +58,9 @@
         <div class="social_links">
             <a target="_blank" tabindex="8" href="https://github.com/VektorTech">
                 <div class="github"><i class="fab fa-github fa-3x"></i></div>
+            </a>
+            <a target="_blank" tabindex="8" href="mailto:kenny.sutherland@protonmail.com">
+                <div class="mail"><i class="fas fa-envelope fa-3x"></i></div>
             </a>
         </div>
         <p class='text'>Made with Vanilla.</p>
@@ -114,7 +118,7 @@
 
         <section id="contact">
             <h2 class='heading'>Contact Me</h2>
-            <form action="/" method="POST">
+            <form action="https://getsimpleform.com/messages?form_api_token=525c8fcb359f8c5fd8bdbb13473622c0" method="POST">
                 <label for='name' class='sub_head'>Name<span class='red_text'>*</span></label>
                 <input pattern="[A-za-z\s]{4,50}" minlength="4" maxlength="50" 
                     title="Enter your name (4 to 50 characters long)" 
