made icons load first

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/fontawesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/solid.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/brands.min.css" rel="stylesheet">
-    <script>fetch('/icons.json').then(data => data.json()).then((obj) => window.skill_icons = obj);</script>
-
+    <script src="/icons.js"></script>
+    
     <!-- <meta property="og:type" content="website">
     <meta property="og:url" content="https://example.com/page.html">
     <meta property="og:title" content="Content Title">
