--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/fontawesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/solid.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/brands.min.css" rel="stylesheet">
-    <script src="/icons.js"></script>
+    <script src="js/icons.js"></script>
     
     <!-- <meta property="og:type" content="website">
     <meta property="og:url" content="https://example.com/page.html">
