Added spinner element

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="style/style.css">
     <title>Front-End React Web Developer | Kenny Sutherland</title>
 </head>
+
 <body>
     <noscript>Please enable JavaScript to proceed.</noscript>
     <canvas></canvas>
@@ -139,6 +140,8 @@
 
     <script async src="js/script.es6"></script>
 </body>
+<!-- Loader -->
+<div class="spinner"></div>
 </html>
 
 <!-- 404 page create -->
