--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Front End React Web Developer">
     <meta property="og:image" content="/favicon.png">
     <meta property="og:description" content="Front-End Web Development (HTML, CSS, JS and React) and Automation (Python and Node)">
-    <meta property="og:site_name" content="Kenny Sutherland Developer Portfolio">
+    <meta property="og:site_name" content="VektorTech Developer Portfolio">
     <meta property="og:locale" content="en_US">
 
     <meta name="twitter:url" content="vektortech.github.io">
@@ -34,7 +34,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/solid.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/brands.min.css" rel="stylesheet">
 
-    <title>Front-End React Web Developer | Kenny Sutherland :: Portfolio</title>
+    <title>Front-End React Web Developer | VektorTech :: Portfolio</title>
     <link rel="manifest" href="/manifest.json">
     <script>
         if ('serviceWorker' in navigator) { 
@@ -81,7 +81,7 @@
 
     <aside id="cover">
         <h1 class="title">Front-End Developer</h1>
-        <h2 class='descr'>Hello, I'm <span class='light_text'>Kenny Sutherland</span> and I enjoy the process of creating amazing user experiences.</h2>
+        <h2 class='descr'>Hello, I'm <span class='light_text'>VektorTech</span> and I enjoy the process of creating amazing user experiences.</h2>
         <button id='contact_btn' onclick="location.href='/#contact'" tabindex="7">Hire me!</button>
         <div class="social_links">
             <ul>
@@ -94,7 +94,7 @@
             </ul>
         </div>
         <p class='text'>Made with Vanilla.</p>
-        <p class='text'>Kenny Sutherland &copy; 2020</p>
+        <p class='text'>VektorTech &copy; 2020</p>
     </aside>
 
     <main>
@@ -104,9 +104,9 @@
                 <div class="card">
                     <h2 class='sub_head'>About</h2>
                     <p class='sub_text'>
+                        Hobbies: Mostly Chess & Reading<br>
                         Age: 23<br>
                         Gender: Male<br>
-                        Height: 6'<br>
                         Location: Jamaica<br>
                     </p> 
                 </div>
@@ -114,7 +114,7 @@
                 <div class="card">     
                     <p class='sub_text'>
                         I am currently pursuing a degree in Computer Science at the University of the West Indies.<br><br>
-                        Always learning and improving my skills as I have a passion for creativity.
+                        I am always learning and improving my skills due to my passion for creativity.
                     </p> 
                 </div>
                 
